--- a/papka1/papka1.1/index.html
+++ b/papka1/papka1.1/index.html
@@ -7,8 +7,62 @@
     <title>Document</title>
 </head>
 <body>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
+    <a href="../../papka2/test.html"  target="_blank" >Test</a>
+    <a href="../../papka3/papka 3.1/papka3.1.1/test2.html" >Test2</a>
+    <a href="../../papka3/papka3.2/test3.html">Test3</a>
+
+<img src=https://apollo-ireland.akamaized.net/v1/files/vorzaz0dg1eg1-UA/image;s=644x461 alt >
+<!-- <img src="hhhhh.jpg" alt="hhhhh"> -->
+<!--маркированный список-->
+<ul>
+    <li>qwerty</li>
+    <li>asdfg</li>
+    <li>zxcvb</li>
+</ul>
+<!--нумерованный список-->
+<ol>
+    <li>poiu</li>
+    <li>lkjh</li>
+    <li>mnbv</li>
+</ol>
+
+
+<table border="1" cellpadding="1"> 
+     
+    <caption>Table of users</caption>
+    <thead>
+        <tr>
+    <th>firstname</th>
+    <th>lastname</th>
+    <th>age</th>
+        </tr>
+    </thead>>
+    <tbody>
+        <tr>
+            <td>Jill</td>
+            <td>Smith</td>
+            <td>50</td>
+        </tr>
+    </tbody>
+</table>
+
+&copy;
+&#169;
+&#913; 
+&spades; 
+<p>&#9830;</p>
+<iframe width="560" height="315"
+    src="https://www.youtube.com/embed/kpNbUN2_ebo"
+    frameborder="0" allowfullscreen></iframe> 
+<iframe src="../../papka3/papka 3.1/papka3.1.1/test2.html" </iframe> 
+
+
+
+
+
+
+
+
 </body>
+
 </html>
