--- a/papka3/papka 3.1/papka3.1.1/test2.html
+++ b/papka3/papka 3.1/papka3.1.1/test2.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h2>this is test 2  </h2>
+    <a href="../../../papka1/papka1.1/index.html">Test</a>
+    <a href="../../../papka2/test.html">Test2</a>
+    <a href="../../../papka3/papka3.2/test3.html">Test3</a>
+
+    <a href="https://https://www.google.com/">Google</a>
 </body>
 </html>
