--- a/papka2/test.html
+++ b/papka2/test.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Test </h1>
+    <a href="../papka1/papka1.1/index.html">Index</a>
+    <a href="../papka3/papka 3.1/papka3.1.1/test2.html">Test2</a>
+    <a href="../papka3/papka3.2/test3.html">Test3</a>
 </body>
 </html>
