--- a/papka3/papka3.2/test3.html
+++ b/papka3/papka3.2/test3.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>This is my test3</h1>
+    <a href="../../papka1/papka1.1/index.html">Test</a>
+    <a href="../../papka2/test.html">Test2</a>
+    <a href="../../papka3/papka 3.1/papka3.1.1/test2.html">test2.2</a>
+    <a href="../../papka3/papka3.2/test3.html">Test3</a>
 </body>
 </html>
